feat: various changes related to documentation and getting java build in order (#12)
* feat: add basic documentation for all the language clients

* feat: add java build, and various fixes for node client for compatability

* chore: fix node test due to API changes

* chore: remove dynamic library part in doc

* chore: various fixes including revising README for java, and removing semaphore from test and build directory