@@ -18,13 +18,13 @@ public class TestFliptClient {
     Map<String, String> context = new HashMap<>();
     context.put("fizz", "buzz");
     VariantEvaluationResponse variant =
-        fc.evaluation.variant(new EvaluationRequest("default", "flag1", "entity", context));
+        fc.evaluation().variant(new EvaluationRequest("default", "flag1", "entity", context));
 
     Assertions.assertTrue(variant.isMatch());
     Assertions.assertEquals("flag1", variant.getFlagKey());
     Assertions.assertEquals("MATCH_EVALUATION_REASON", variant.getReason());
     Assertions.assertEquals("variant1", variant.getVariantKey());
-    Assertions.assertEquals("segment1", variant.getSegmentKeys().getFirst());
+    Assertions.assertEquals("segment1", variant.getSegmentKeys().get(0));
   }
 
   @Test
@@ -41,8 +41,8 @@ public class TestFliptClient {
     context.put("fizz", "buzz");
 
     BooleanEvaluationResponse booleanEvaluation =
-        fc.evaluation.booleanEvaluation(
-            new EvaluationRequest("default", "flag_boolean", "entity", context));
+        fc.evaluation()
+            .booleanEvaluation(new EvaluationRequest("default", "flag_boolean", "entity", context));
 
     Assertions.assertTrue(booleanEvaluation.isEnabled());
     Assertions.assertEquals("flag_boolean", booleanEvaluation.getFlagKey());
@@ -75,10 +75,10 @@ public class TestFliptClient {
     evaluationRequests.add(errorEvaluationRequest);
 
     BatchEvaluationResponse batch =
-        fc.evaluation.batch(new BatchEvaluationRequest(Optional.of(""), evaluationRequests));
+        fc.evaluation().batch(new BatchEvaluationRequest(Optional.of(""), evaluationRequests));
 
     // Variant
-    EvaluationResponse first = batch.getResponses().getFirst();
+    EvaluationResponse first = batch.getResponses().get(0);
     Assertions.assertEquals("VARIANT_EVALUATION_RESPONSE_TYPE", first.getType());
 
     VariantEvaluationResponse variant = first.getVariantResponse().get();
@@ -86,7 +86,7 @@ public class TestFliptClient {
     Assertions.assertEquals("flag1", variant.getFlagKey());
     Assertions.assertEquals("MATCH_EVALUATION_REASON", variant.getReason());
     Assertions.assertEquals("variant1", variant.getVariantKey());
-    Assertions.assertEquals("segment1", variant.getSegmentKeys().getFirst());
+    Assertions.assertEquals("segment1", variant.getSegmentKeys().get(0));
 
     // Boolean
     EvaluationResponse second = batch.getResponses().get(1);
